fix drawer appbar z-index

--- a/src/css/_app_bar.scss
+++ b/src/css/_app_bar.scss
@@ -6,10 +6,20 @@
   overflow: hidden;
 }
 
+.app-bar-wrapper__content {
+  flex-grow: 1;
+  display: flex;
+  overflow: auto;
+
+  .drawer {
+    z-index: 90;
+  }
+}
+
 .app-bar {
   box-shadow: 0 1px 0 var(--border-color);
   background: white;
-  z-index: 1;
+  z-index: 100;
 
   .toolbar {
     padding: 4px;
