--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -33,15 +33,9 @@ img {
   flex-direction: column;
 }
 
-.main {
-  overflow: auto;
+.app-content {
   flex-grow: 1;
-}
-
-.main__container {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 16px;
+  overflow: auto;
 }
 
 .subheader {
