--- a/src/css/_utils.scss
+++ b/src/css/_utils.scss
@@ -2,9 +2,25 @@
   display: none;
 }
 
+.display-on-tablet {
+  display: none;
+}
+
 @media (max-width: $mobile-break-point) {
   .display-on-mobile {
     display: inherit;
+  }
+}
+
+@media (max-width: $tablet-break-point) {
+  .display-on-tablet {
+    display: inherit;
+  }
+}
+
+@media (min-width: $tablet-break-point) {
+  .disabled-on-desktop {
+    pointer-events: none;
   }
 }
 
