--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,5 +1,5 @@
 $mobile-break-point: 480px !default;
-$tablet-break-pint: 960px !default;
+$tablet-break-point: 960px !default;
 
 :root {
   --primary-color: #2196F3;
